--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -62,10 +62,18 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Sobre.html">Sobre Nós</a>
+                            <a class="nav-link" href="#">Sobre Nós</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                Cadastro
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="cadastro.html">Realize seu cadastro</a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Contato</a>
+                            <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
                     <div class="search-container my-2 my-lg-0">
@@ -105,7 +113,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="details_content">
-                                    <div class="details_name">Lorem ipsum</div>
+                                    <div class="details_name" id="product_name">Blusa de Lã - Cinza e Preta Softwave</div>
                                     <div class="details_discount">R$890</div>
                                     <div class="details_price">R$670</div>
                                     <div class="in_stock_container">
@@ -113,7 +121,7 @@
                                         Em Estoque
                                     </div>
                                     <div class="details_text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor, dolor eu interdum sodales, magna odio venenatis ipsum, pretium condimentum elit massa scelerisque tortor. Nulla feugiat nisl in massa placerat hendrerit. Proin vitae dolor convallis, ullamcorper lorem in, commodo est. Donec non nunc vulputate, mattis felis scelerisque, sagittis quam. Quisque ut vestibulum eros. Curabitur auctor dui a nibh porta imperdiet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis augue enim, blandit a interdum porta, viverra sit amet elit.</p>
+                                        <p>Nos dias mais frios, não existe nada mais confortável e essencial do que as blusas e casacos de lã Softwave. As mulheres gostam de ficar mais elegantes nesta época. Atualmente podemos encontrar diversas blusas e casacos de lã feminino, em diferentes modelos, cores e até mesmo estampas.</p>
                                     </div>
                                     <div class="product_quantity_container">
                                         <div class="product_quantity clearfix">
@@ -141,35 +149,35 @@
         </div>
         <div class="container">
             <footer>
-        <section class="footer footer_1its py-5">
-            <div class="container py-md-4">
-                <div class="row footer-top mb-md-5 mb-4">
-                    <div class="col-lg-4 col-md-6 footer-grid_section_1its">
-                        <div class="footer-title-w3ls">
-                            <h3>Endereço</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p>Endereço : Oscar Freire, 1000, São Paulo - SP</p>
-                            <p>Telefone : 11 5348-9436</p>
-                            <p>Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
+                <section class="footer footer_1its py-5">
+                    <div class="container py-md-4">
+                        <div class="row footer-top mb-md-5 mb-4">
+                            <div class="col-lg-4 col-md-7 footer-grid_section_1its">
+                                <div class="footer-title-w3ls">
+                                    <h3>Endereço</h3>
+                                </div>
+                                <div class="footer-text">
+                                    <p class="m-0">Endereço : Oscar Freire, 1000, São Paulo - SP</p>
+                                    <p class="m-0">Telefone : 11 5348-9436</p>
+                                    <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-5 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
+                                <div class="footer-title-w3ls">
+                                    <h3>Últimas Notícias</h3>
+                                </div>
+                                <div class="footer-text">
+                                    <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
+                                    <form action="#" method="post" class="form-inline">
+                                        <input class="form-control" type="email" name="Email" placeholder="Cadastre seu email..." required="" >
+                                        <button class="btn btn-dark"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
-                        <div class="footer-title-w3ls">
-                            <h3>Últimas Notícias</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
-                            <form action="#" method="post" class="form-inline">
-                                <input class="form-control" type="email" name="Email" placeholder="Cadastre seu email..." required="" >
-                                <button class="btn btn-dark"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </footer>
+                </section>
+            </footer>
     <!-- //footer -->
         </div>  
     </body>
