--- a/vitrine.html
+++ b/vitrine.html
@@ -63,18 +63,32 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Sobre.html">Sobre Nós</a>
+                            <a class="nav-link" href="#">Sobre Nós</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                Cadastro
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="cadastro.html">Realize seu cadastro</a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Contato</a>
+                            <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
-                    <div class="search-container my-2 my-lg-0">
-                     <form class="form-inline" action="produto-busca.html">
-                        <input class="form-control" type="search" placeholder="Procurar..." name="search" id="mySearch" required>
-                        <button type="submit" class="btn btn-dark" onclick="doSearch()"><i class="fa fa-search"></i></button>
-                    </form>
-                </div>
+                    <div class="col-lg-4 col-md-3 col-sm-3 col-12">
+                        <div class="float-right">
+                            <form class="form-inline" action="produto-busca.html">
+                                <div>
+                                    <input class="form-control" type="search" placeholder="Procurar..." name="search" id="mySearch" required>
+                                </div>
+                                <div>
+                                    <button type="submit" class="btn btn-dark" onclick="doSearch()"><i class="fa fa-search"></i></button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </nav>
             <div id="ws_carousel" class="carousel slide" data-ride="carousel">
@@ -123,7 +137,7 @@
                             <a href="produto-detalhe.html"><img src="images/sacada-roupas-femininas-inverno.png" alt="High Edu" class="img-fluid" title="Blusa de lã - Cinza e Preta Softwave"></a>
                             <div class="informacoes py-2 " >
                             	<a class="botaocomprar" title="Blusa de lã - Cinza e Preta Softwave" href="produto-detalhe.html">
-                                    <p class="produto">Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p class="produto">Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
@@ -147,7 +161,7 @@
                             <a href="produto-detalhe.html"><img src="images/blusa-furada-azul.png" alt="High Edu" class="img-fluid" title="Regatinha Furinhos- Azul Softwave"></a>
                             <div class="informacoes bg-light py-2 " >
                                 <a class="botaocomprar" title="Regatinha Furinhos- Azul Softwave" href="produto-detalhe.html">
-                                    <p class="produto ">Regatinha Furinhos- Azul Softwave</p>   
+                                    <p class="produto ">Regatinha Furinhos - Azul Softwave</p>   
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
@@ -159,7 +173,7 @@
                             <a href="produto-detalhe.html"><img src="images/calca-estampada-preta.png" alt="High Edu" class="img-fluid" title="Calça estampada Softwave"></a>
                             <div class="informacoes bg-light py-2 " >
                                 <a class="botaocomprar" title="Calça estampada Softwave" href="produto-detalhe.html">
-                                    <p class="produto ">Calça alta estampada Softwave</p>   
+                                    <p class="produto ">Calça Alta Estampada - Softwave</p>   
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
@@ -183,7 +197,7 @@
                             <a href="produto-detalhe.html"><img src="images/macacao-preto.png" alt="High Edu" class="img-fluid" title="Macacão estampado - Preto Softwave"></a>
                             <div class="informacoes bg-light py-2 " >
                                 <a class="botaocomprar" title="Macacão estampado - Preto Softwave" href="produto-detalhe.html">
-                                    <p class="produto ">Macacão estampado - Preto Softwave</p>   
+                                    <p class="produto ">Macacão Estampado - Preto Softwave</p>   
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
@@ -202,7 +216,7 @@
                 <section class="footer footer_1its py-5">
                     <div class="container py-md-4">
                         <div class="row footer-top mb-md-5 mb-4">
-                            <div class="col-lg-4 col-md-6 footer-grid_section_1its">
+                            <div class="col-lg-4 col-md-7 footer-grid_section_1its">
                                 <div class="footer-title-w3ls">
                                     <h3>Endereço</h3>
                                 </div>
@@ -212,7 +226,7 @@
                                     <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
+                            <div class="col-lg-4 col-md-5 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
                                 <div class="footer-title-w3ls">
                                     <h3>Últimas Notícias</h3>
                                 </div>
