--- a/cesta.html
+++ b/cesta.html
@@ -61,10 +61,18 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Sobre.html">Sobre Nós</a>
+                            <a class="nav-link" href="#">Sobre Nós</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                Cadastro
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="cadastro.html">Realize seu cadastro</a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Contato</a>
+                            <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
                     <div class="search-container my-2 my-lg-0">
@@ -76,7 +84,7 @@
                 </div>
             </nav>
             <div class="minhas-compras bg-light mt-4">
-                <h4>Meu Carrinho</h4>
+                <h5>Meu Carrinho</h5>
             </div>
             <div class="cart">
                 <table class="table cart-item">
@@ -137,7 +145,7 @@
                 <section class="footer footer_1its py-5">
                     <div class="container py-md-4">
                         <div class="row footer-top mb-md-5 mb-4">
-                            <div class="col-lg-4 col-md-6 footer-grid_section_1its">
+                            <div class="col-lg-4 col-md-7 footer-grid_section_1its">
                                 <div class="footer-title-w3ls">
                                     <h3>Endereço</h3>
                                 </div>
@@ -147,7 +155,7 @@
                                     <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
+                            <div class="col-lg-4 col-md-5 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
                                 <div class="footer-title-w3ls">
                                     <h3>Últimas Notícias</h3>
                                 </div>
