--- a/produto-busca.html
+++ b/produto-busca.html
@@ -44,31 +44,39 @@
             <!--Menu-->
             <div class="collapse navbar-collapse" id="navbarSite">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="navbar-item">
-                        <a class="nav-link" href="vitrine.html">Home</a>
-                    </li>
+                        <li class="navbar-item">
+                            <a class="nav-link" href="vitrine.html">Home</a>
+                        </li>
 
-                    <!-- Dropdown -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                            Produtos
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="vitrine.html">Blusas</a>
-                            <a class="dropdown-item" href="vitrine.html">Calças</a>
-                            <a class="dropdown-item" href="vitrine.html">Vestidos</a>
-                            <a class="dropdown-item" href="vitrine.html">Saias</a>
-                            <a class="dropdown-item" href="vitrine.html">Shorts</a>
-                            <a class="dropdown-item" href="vitrine.html">Acessórios</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Sobre.html">Sobre Nós</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contato.html">Contato</a>
-                    </li>
-                </ul>
+                        <!-- Dropdown -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                Produtos
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="vitrine.html">Blusas</a>
+                                <a class="dropdown-item" href="vitrine.html">Calças</a>
+                                <a class="dropdown-item" href="vitrine.html">Vestidos</a>
+                                <a class="dropdown-item" href="vitrine.html">Saias</a>
+                                <a class="dropdown-item" href="vitrine.html">Shorts</a>
+                                <a class="dropdown-item" href="vitrine.html">Acessórios</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sobre Nós</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                Cadastro
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="cadastro.html">Realize seu cadastro</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contato</a>
+                        </li>
+                    </ul>
                 <div class="search-container my-2 my-lg-0">
                      <form class="form-inline" action="produto-busca.html">
                         <input class="form-control" type="search" placeholder="Procurar..." name="search" id="mySearch" required>
@@ -99,7 +107,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -116,7 +124,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -132,7 +140,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -148,7 +156,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -164,7 +172,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -180,7 +188,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -196,7 +204,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -212,7 +220,7 @@
                             <div class="pi-text">
                                 <a href="produto-detalhe.html">
                                     <h6>R$670</h6>
-                                    <p>Blusa de lã - Cinza e Preta Softwave</p>
+                                    <p>Blusa de Lã - Cinza e Preta Softwave</p>
                                 </a>
                             </div>
                         </div>
@@ -236,35 +244,35 @@
     <div class="container">
         <!-- //footer -->
         <footer>
-            <section class="footer footer_1its py-5">
-                <div class="container py-md-4">
-                    <div class="row footer-top mb-md-5 mb-4">
-                        <div class="col-lg-4 col-md-6 footer-grid_section_1its">
-                            <div class="footer-title-w3ls">
-                                <h3>Endereço</h3>
+                <section class="footer footer_1its py-5">
+                    <div class="container py-md-4">
+                        <div class="row footer-top mb-md-5 mb-4">
+                            <div class="col-lg-4 col-md-7 footer-grid_section_1its">
+                                <div class="footer-title-w3ls">
+                                    <h3>Endereço</h3>
+                                </div>
+                                <div class="footer-text">
+                                    <p class="m-0">Endereço : Oscar Freire, 1000, São Paulo - SP</p>
+                                    <p class="m-0">Telefone : 11 5348-9436</p>
+                                    <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
+                                </div>
                             </div>
-                            <div class="footer-text">
-                                <p class="m-0">Endereço : Oscar Freire, 1000, São Paulo - SP</p>
-                                <p class="m-0">Telefone : 11 5348-9436</p>
-                                <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
-                            <div class="footer-title-w3ls">
-                                <h3>Últimas Notícias</h3>
-                            </div>
-                            <div class="footer-text">
-                                <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
-                                <form action="#" method="post" class="form-inline">
-                                    <input class="form-control" type="email" name="Email" placeholder="Cadastre seu email..." required="" >
-                                    <button class="btn btn-dark"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
-                                </form>
+                            <div class="col-lg-4 col-md-5 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
+                                <div class="footer-title-w3ls">
+                                    <h3>Últimas Notícias</h3>
+                                </div>
+                                <div class="footer-text">
+                                    <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
+                                    <form action="#" method="post" class="form-inline">
+                                        <input class="form-control" type="email" name="Email" placeholder="Cadastre seu email..." required="" >
+                                        <button class="btn btn-dark"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </footer>
+                </section>
+            </footer>
         <!-- //footer -->
     </div>  
 </body>
