ajustes no rodapé

--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -76,12 +76,18 @@
                             <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
-                    <div class="search-container my-2 my-lg-0">
-                     <form class="form-inline" action="produto-busca.html">
-                        <input class="form-control" type="search" placeholder="Procurar..." name="search" id="mySearch" required>
-                        <button type="submit" class="btn btn-dark" onclick="doSearch()"><i class="fa fa-search"></i></button>
-                    </form>
-                </div>
+                    <div class="col-lg-4 col-md-3 col-sm-3 col-12">
+                        <div class="float-right">
+                            <form class="form-inline" action="produto-busca.html">
+                                <div>
+                                    <input class="form-control" type="search" placeholder="Procurar..." name="search" id="mySearch" required>
+                                </div>
+                                <div>
+                                    <button type="submit" class="btn btn-dark" onclick="doSearch()"><i class="fa fa-search"></i></button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </nav>
             <!-- produto -->
